Remove unnecessary file